_styles/components/_ajax-cart.css
.ajax-cart {
  --z-body: 1;
  --z-footer: 2;
  --z-empty: 4;
  --z-header: 5;

  @apply fixed z-(--z-ajax-cart) top-0 right-0 h-[100dvh] w-full bg-bg;
  @media (min-width: 1024px) { max-width: min(90vw, 500px); }
  @apply translate-x-full;
  transition: var(--transition-drawer-out);

  pointer-events: none;

  &.is-open {
    @apply translate-x-0;
    transition: var(--transition-drawer-in);
    pointer-events: auto;
  }
}

.ajax-cart__header {
  @apply relative flex items-center justify-between;

  z-index: var(--z-header);
  height: var(--header-height);
  padding-inline: var(--spacing-container);
}

.ajax-cart__body {
  @apply relative;

  z-index: var(--z-body);
  padding: 0 var(--spacing-container);
}

.ajax-cart__item {
  &.is-being-removed {
    cursor: not-allowed;
  }  
}

.ajax-cart__item-inner {
  @apply flex items-start gap-x-3;
  padding: 16px 0;

  transition: opacity 250ms ease-in-out;

  .is-removing &,
  .is-updating & {
    opacity: 0.5;
    pointer-events: none;
    cursor: not-allowed;
  }

  /* List of item details */
  ul {
    @apply text-sm
  }

  img {
    @apply w-[120px] aspect-[4/5] object-cover;

    &.is-cached {
      transition: none;
    }
  }  
}

.ajax-cart__footer {
  @apply flex flex-col gap-y-3 bg-bg;
  z-index: var(--z-footer);
  padding: 16px var(--spacing-container);
  padding-bottom: calc(16px + env(safe-area-inset-bottom, 0px));
}


.ajax-cart__empty {
  @apply absolute top-0 left-0 h-full w-full flex flex-col justify-center bg-bg;
  z-index: var(--z-empty);  

  padding: 0 var(--spacing-container);

  @apply opacity-0 pointer-events-none;
  transition: opacity 100ms ease-out;

  .is-empty & {
    @apply opacity-100 pointer-events-auto;
    transition-duration: 0.4s;
  }
}

.ajax-cart__empty-text {
  opacity: 0;
  transform: translateY(10px);
  transition-property: opacity, transform;
  transition-duration: 0.5s;
  transition-timing-function: ease;

  .is-empty & {
    opacity: 1;
    transform: translateY(0);
    transition-delay: 0.3s;
  }
}

